Changed swagger comments to use colon syntax instead of curl braces
