# docs/swagger.yaml
@@ -182,7 +182,7 @@ info:
   title: Graph Snapper API
   version: "1.0"
 paths:
-  /account/{id}:
+  /account/:id:
     get:
       description: Non-authenticated endpoint fetches account at specified key
       parameters:
@@ -225,7 +225,7 @@ paths:
       summary: Create account record
       tags:
       - account
-  /account/{id}/credentials:
+  /account/:id/credentials:
     put:
       description: Non-authenticated endpoint that adds grafana and confluence-server users to an account. Assumes entries are pre-validated
       parameters:
